@@ -43,7 +43,6 @@ remove = Math::Int64
 remove = MongoDB
 remove = MongoDB::BSON::Binary
 remove = MongoDB::BSON::Regexp
-remove = MongoDB::BSON::_EncodedDoc
 remove = MongoDB::Code
 remove = MongoDB::DBRef
 remove = MongoDB::OID
