@@ -70,17 +70,6 @@ subtest "Top level document" => sub {
     is( ref($hash), 'HASH', "Tie::IxHash(OO)->hashref" );
     is_deeply( $hash, {@kv}, "value correct" );
 
-    SKIP: {
-        eval { require MongoDB::BSON::_EncodedDoc };
-        skip( "MongoDB::BSON::_EncodedDoc not installed", 4 )
-          unless $INC{'MongoDB/BSON/_EncodedDoc.pm'};
-        $hash =
-          decode(
-            encode( MongoDB::BSON::_EncodedDoc->new( bson => $raw, metadata => {} ) ) );
-        is( ref($hash), 'HASH', "MongoDB::BSON::_EncodedDoc->hashref" );
-        is_deeply( $hash, {@kv}, "value correct" );
-    }
-
 };
 
 subtest "Subdocument" => sub {
@@ -118,17 +107,6 @@ subtest "Subdocument" => sub {
     is( ref( $hash->{doc} ), 'HASH', "Tie::IxHash(OO)->hashref" );
     is_deeply( $hash->{doc}, {@kv}, "value correct" );
 
-    SKIP: {
-        eval { require MongoDB::BSON::_EncodedDoc };
-        skip( "MongoDB::BSON::_EncodedDoc not installed", 4 )
-          unless $INC{'MongoDB/BSON/_EncodedDoc.pm'};
-        $hash =
-          decode(
-            encode( { doc => MongoDB::BSON::_EncodedDoc->new( bson => $raw, metadata => {} ) } )
-          );
-        is( ref( $hash->{doc} ), 'HASH', "MongoDB::BSON::_EncodedDoc->hashref" );
-        is_deeply( $hash->{doc}, {@kv}, "value correct" );
-    }
 };
 
 subtest "Nested" => sub {
@@ -166,18 +144,6 @@ subtest "Nested" => sub {
     is( ref( $hash->{doc} ), 'HASH', "Tie::IxHash(OO)->hashref" );
     is_deeply( $hash->{doc}, {@kv}, "value correct" );
 
-    SKIP: {
-        eval { require MongoDB::BSON::_EncodedDoc };
-        skip( "MongoDB::BSON::_EncodedDoc not installed", 4 )
-          unless $INC{'MongoDB/BSON/_EncodedDoc.pm'};
-        $hash = decode(
-            encode(
-                bson_doc( doc => MongoDB::BSON::_EncodedDoc->new( bson => $raw, metadata => {} ) )
-            )
-        );
-        is( ref( $hash->{doc} ), 'HASH', "MongoDB::BSON::_EncodedDoc->hashref" );
-        is_deeply( $hash->{doc}, {@kv}, "value correct" );
-    }
 };
 
 subtest "Ordered top level doc" => sub {
